chore: keeping min width 150px

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -132,7 +132,7 @@ $menu-label-color: $white-ter
 .language__card 
   margin: 20px
   padding: 20px
-  width: 100px
+  min-width: 150px
   min-height: 50px
   display: grid
   grid-template-rows: 20px 50px 1fr 50px
