--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -134,11 +134,10 @@ $menu-label-color: $white-ter
   padding: 20px
   min-width: 150px
   min-height: 50px
-  display: grid
-  grid-template-rows: 20px 50px 1fr 50px
   border-radius: 10px
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25)
   transition: all 0.2s
+  text-align: center
 
 
 .language__card:hover 
