--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -126,7 +126,7 @@ $menu-label-color: $white-ter
 .language__cards 
   display: flex
   flex-wrap: wrap
-  justify-content: space-between
+  justify-content: center
   
   
 .language__card 
@@ -134,80 +134,11 @@ $menu-label-color: $white-ter
   padding: 20px
   min-width: 150px
   min-height: 50px
-  border-radius: 10px
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25)
-  transition: all 0.2s
   text-align: center
+  border-radius: 10px
+  -webkit-box-shadow: 1px -1px 27px 2px rgba(0,0,0,0.76)
+  box-shadow: 1px -1px 27px 2px rgba(0,0,0,0.76)
 
-
-.language__card:hover 
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4)
-  transform: scale(1.01)
-
-
-.language__card__link,
-.language__card__exit,
-.language__card__icon 
-  position: relative
-  text-decoration: none
-  color: rgba(255, 255, 255, 0.9)
-
-
-.language__card__link::after 
-  position: absolute
-  top: 25px
-  left: 0
-  content: ""
-  width: 0%
-  height: 3px
-  background-color: rgba(255, 255, 255, 0.6)
-  transition: all 0.5s
-
-
-.language__card__link:hover::after 
-  width: 100%
-
-
-.language__card__exit 
-  grid-row: 1/2
-  justify-self: end
-
-
-.language__card__icon 
-  grid-row: 2/3
-  font-size: 30px
-
-
-.language__card__title 
-  grid-row: 3/4
-  font-weight: 400
-  color: #ffffff
-
-
-.language__card__apply 
-  grid-row: 4/5
-  align-self: center
-
-
-
-.language__card-1 
-  background: radial-gradient(#1fe4f5, #3fbafe)
-
-
-.language__card-2 
-  background: radial-gradient(#fbc1cc, #fa99b2)
-
-
-.language__card-3 
-  background: radial-gradient(#76b2fe, #b69efe)
-
-
-.language__card-4 
-  background: radial-gradient(#60efbc, #58d5c9)
-
-
-.language__card-5 
-  background: radial-gradient(#f588d8, #c0a3e5)
 
 
 @import "~bulma"
