feat: home page changes

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,8 +1,8 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+// Kaldi logo brand color: #FDE900
+$kaldi-red: #FDE900
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -130,14 +130,16 @@ $menu-label-color: $white-ter
   
   
 .language__card 
-  margin: 20px
-  padding: 20px
-  min-width: 150px
-  min-height: 50px
+  margin: 10px
+  padding: 10px
+  min-width: 50px
+  min-height: 30px
   text-align: center
+  border: 1px solid grey
   border-radius: 10px
-  -webkit-box-shadow: 1px -1px 27px 2px rgba(0,0,0,0.76)
-  box-shadow: 1px -1px 27px 2px rgba(0,0,0,0.76)
+  background-color:#FDE900
+  font-size:12px
+  font-weight:700
 
 
 pre
