--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -138,7 +138,7 @@ $menu-label-color: $white-ter
   border: 1px solid grey
   border-radius: 10px
   background-color:#FDE900
-  font-size:12px
+  font-size:1.2rem
   font-weight:700
 
 
